Finish API Generic Repository

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db"
-  }
+  },
+  "Apiurl": "https://localhost:5001/"
 }
